--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#projects" class="menu-btn">Proje<span>X</span></a></li>
+                <li><a href="#projects" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -119,10 +119,25 @@
                             <span>90%</span>
                         </div>
                         <div class="line html"></div>
-                    </div>
+                    </div> 
+                    
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Sass</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Bootstrap</span>
                             <span>90%</span>
                         </div>
                         <div class="line html"></div>
@@ -133,6 +148,13 @@
                             <span>80%</span>
                         </div>
                         <div class="line js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Jquery</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
